# server/src/db/mod.rs
@@ -1,5 +1,6 @@
 pub mod batches;
 pub mod containers;
+pub mod harvests;
 pub mod plants;
 pub mod push;
 pub mod users;
